--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ lxml==4.6.3
 MarkupSafe==1.1.1
 pox==0.2.8
 pykakasi==2.0.1
+requests==2.27.1
 soupsieve==2.0.1
 SQLAlchemy==1.3.18
 Werkzeug==1.0.1
