--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.9.1
 click==7.1.2
 dill==0.3.2
 Flask==1.1.2
+Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 itsdangerous==1.1.0
