--- a/flaskapp/requirements.txt
+++ b/flaskapp/requirements.txt
@@ -16,6 +16,7 @@ pykakasi==2.0.1
 requests==2.27.1
 soupsieve==2.0.1
 SQLAlchemy==1.3.18
+uWSGI==2.0.20
 Werkzeug==1.0.1
 WTForms==2.3.1
 WTForms-SQLAlchemy==0.2
